5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1613_2043.log
== TEST (2019-04-04 18:29:06) 
-- CODE:
#cria se a variavel das notas dos marginal
nota1=input("nota do marginal1")
nota2=input("nota do marginal2")
nota3=input("nota do marginal3")
nota4=input("nota do marginal4")
#definise a variavel da media ponderada das notas
media=(nota1*1)+(nota2*2)+(nota3*3)+(nota4*4)/10
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    media=(nota1*1)+(nota2*2)+(nota3*3)+(nota4*4)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:29:48) 
-- CODE:
#cria se a variavel das notas dos marginal
nota1=float(input("nota do marginal1"))
nota2=float(input("nota do marginal2"))
nota3=float(input("nota do marginal3"))
nota4=float(input("nota do marginal4"))
#definise a variavel da media ponderada das notas
media=(nota1*1)+(nota2*2)+(nota3*3)+(nota4*4)/10
print(media)


-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:31:01) 
-- CODE:
#cria se a variavel das notas dos marginal
nota1=float(input("nota do marginal1"))
nota2=float(input("nota do marginal2"))
nota3=float(input("nota do marginal3"))
nota4=float(input("nota do marginal4"))
#definise a variavel da media ponderada das notas
media=(nota1*1)+(nota2*2)+(nota3*3)+(nota4*4)/10
mediar=round(media, 2)
print(mediar)


-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:31:58) 
-- CODE:
#cria se a variavel das notas dos marginal
nota1=float(input("nota do marginal1"))
nota2=float(input("nota do marginal2"))
nota3=float(input("nota do marginal3"))
nota4=float(input("nota do marginal4"))
#definise a variavel da media ponderada das notas
media=
nota1*1+nota2*2+nota3*3+nota4*4/10
mediar=round(media, 2)
print(mediar)


-- ERROR:
File "XXXX", line 7
    media=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:32:06) 
-- CODE:
#cria se a variavel das notas dos marginal
nota1=float(input("nota do marginal1"))
nota2=float(input("nota do marginal2"))
nota3=float(input("nota do marginal3"))
nota4=float(input("nota do marginal4"))
#definise a variavel da media ponderada das notas
media=nota1*1+nota2*2+nota3*3+nota4*4/10
mediar=round(media, 2)
print(mediar)


-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:34:40) 
-- CODE:
#cria se a variavel das notas dos marginal
nota1=float(input("nota do marginal1"))
nota2=float(input("nota do marginal2"))
nota3=float(input("nota do marginal3"))
nota4=float(input("nota do marginal4"))
#definise a variavel da media ponderada das notas
media=((nota1*1)+(nota2*2)+(nota3*3)+(nota4*4))/10
mediar=round(media, 2)
print(mediar)


-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:34:47) 
-- CODE:
#cria se a variavel das notas dos marginal
nota1=float(input("nota do marginal1"))
nota2=float(input("nota do marginal2"))
nota3=float(input("nota do marginal3"))
nota4=float(input("nota do marginal4"))
#definise a variavel da media ponderada das notas
media=((nota1*1)+(nota2*2)+(nota3*3)+(nota4*4))/10
mediar=round(media, 2)
print(mediar)


-- EXECUTION TIME:
0.196623
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
